--- a/index.html
+++ b/index.html
@@ -112,8 +112,12 @@ http://www.templatemo.com/tm-476-conquer
 				<center>
 					<h1>亞洲四小龍2016~2021年入境觀光客統計</h1>
 					<div style="width: 100%; height: 100%;">
-						<iframe frameborder="0" src="line.html" width="1000" height="620"></iframe>
+						<iframe style="border: 1px solid gray;" src="line.html" width="1000" height="460"></iframe>
 					</div>
+					<br/><br/>
+					<p class="highcharts-description">
+						可從圖表得知，入境人數一開始由香港最多，2019~2020年四國都大幅度降低，我想是因為疫情邊境索國的關係導致，而2020~2021疫情也持續著，因此人數也很低。
+					</p>
 				</center>
 			</div>			
 							<br/><br/>
@@ -121,10 +125,14 @@ http://www.templatemo.com/tm-476-conquer
 				<br/><br/>
 				<center>
 					<h1>2022年來台旅客居住地統計</h1>		
-						<iframe frameborder="0" src="pie.html" width="820" height="620"></iframe>
-			</div>
+						<iframe style="border: 1px solid gray;" src="pie.html" width="820" height="460"></iframe>
+			
+			<br/><br/>
+			<p class="highcharts-description">
+				從圖可發現，2022年來台灣以亞洲地區的旅客居多，占比為77.8%；其次為美洲地區，占比為12.1%。
+			</p>
 				</center>
-
+			</div>
 
 
 				</div>
@@ -133,7 +141,7 @@ http://www.templatemo.com/tm-476-conquer
 
 						<!-- End Contact Area -->
 					</div>
-
+					<br/><br/><br/><br/>
 					<!-- Start Footer Area -->
 					<footer id="footer-area">
 						<div class="container">
